# social-media-api-django

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
social/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
social/management/commands/: seed.py
social/migrations/: 0001_initial.py
social/tests/: test_api.py
