[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(\n    \\.git\n  | \\.mypy_cache\n  | \\.venv\n  | migrations\n)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["social","core"]
skip = ["migrations"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
